Design and TODO1

--- a/src/gamex/gamexDesktopApp/Views/PasswordReminderView.xaml
+++ b/src/gamex/gamexDesktopApp/Views/PasswordReminderView.xaml
@@ -66,8 +66,7 @@
                     Grid.Column="0"
                     Grid.ColumnSpan="2"
                     Grid.Row="1"
-                    FontSize="16"
-                    FontWeight="Bold"
+                    FontWeight="SemiBold"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Right"
                     Width="100"
@@ -87,19 +86,20 @@
                    Grid.ColumnSpan="2"
                    Grid.Row="2"
                    FontSize="12"
-                   FontStyle="Italic" />
+                   FontStyle="Italic" 
+                   VerticalAlignment="Center"/>
             <Button x:Name="btnRegisterPassReminder"
                     Content="Register"
                     Command="{Binding ViewRegisterCommand}"
                     Grid.Column="0"
                     Grid.ColumnSpan="2"
                     Grid.Row="2"
-                    FontSize="12"
                     FontStyle="Italic"
-                    FontWeight="Bold"
+                    FontWeight="SemiBold"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Right"
-                    Width="80"
+                    Width="100"
+                    Height="30"
                     Margin="5"
                     Background="DarkRed"
                     BorderBrush="{x:Null}">
