--- a/src/gamex/gamexDesktopApp/Views/LoginView.xaml
+++ b/src/gamex/gamexDesktopApp/Views/LoginView.xaml
@@ -104,8 +104,7 @@
                     Grid.Column="1"
                     Grid.ColumnSpan="2"
                     Grid.Row="3"
-                    FontSize="16"
-                    FontWeight="Bold"
+                    FontWeight="SemiBold"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Right"
                     Width="100"
@@ -134,8 +133,7 @@
                     Grid.Column="1"
                     Grid.ColumnSpan="2"
                     Grid.Row="4"
-                    FontSize="16"
-                    FontWeight="Bold"
+                    FontWeight="SemiBold"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Right"
                     Margin="5"
