--- a/src/gamex/gamexDesktopApp/Views/RegistrationView.xaml
+++ b/src/gamex/gamexDesktopApp/Views/RegistrationView.xaml
@@ -142,8 +142,7 @@
                     Grid.Column="0"
                     Grid.ColumnSpan="2"
                     Grid.Row="5"
-                    FontSize="16"
-                    FontWeight="Bold"
+                    FontWeight="SemiBold"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Right"
                     Width="150"
@@ -170,15 +169,14 @@
                     Grid.Column="0"
                     Grid.ColumnSpan="2"
                     Grid.Row="6"
-                    FontSize="16"
                     FontStyle="Italic"
-                    FontWeight="Bold"
+                    FontWeight="SemiBold"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Right"
                     Margin="5"
                     Background="DarkRed"
                     BorderBrush="{x:Null}"
-                    Width="70"
+                    Width="100"
                     Height="30">
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
