--- a/src/gamex/gamexDesktopApp/Views/GamesSalesView.xaml
+++ b/src/gamex/gamexDesktopApp/Views/GamesSalesView.xaml
@@ -163,7 +163,7 @@
                         Background="DarkRed"
                         BorderBrush="{x:Null}"
                         Command="{Binding UpdatePageCommand}"
-                        CommandParameter="1">
+                        CommandParameter="Start">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="7" />
